package com.gykj.addressselect.net;

/**
 * Created by jyh on 2019-08-06.
 */

public class Config {

    public final static String BASE_URL = "https://nyapi.agribigdata.com.cn";

}
