@startuml

title __NET's Class Diagram__\n

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.Config {
          {static} + BASE_URL : String
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.OkHttpEvent {
          + apiSuccess : boolean
          + dnsEndTime : long
          + dnsStartTime : long
          + errReson : String
          + responseBodySize : long
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.OkHttpEventListener {
          {static} + FACTORY : Factory
          + OkHttpEventListener()
          + callEnd()
          + callFailed()
          + callStart()
          + connectEnd()
          + connectFailed()
          + connectStart()
          + connectionAcquired()
          + connectionReleased()
          + dnsEnd()
          + dnsStart()
          + requestBodyEnd()
          + requestBodyStart()
          + requestHeadersEnd()
          + requestHeadersStart()
          + responseBodyEnd()
          + responseBodyStart()
          + responseHeadersEnd()
          + responseHeadersStart()
          + secureConnectEnd()
          + secureConnectStart()
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.RequestUtil {
          {static} - mContext : Context
          {static} + request()
          {static} - getRequestUrl()
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.RequestUtil.InvokeRequestHandler {
          - mNetWorkResult : NetWorkResult<R>
          - obj : Object
          + InvokeRequestHandler()
          + invoke()
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      interface com.gykj.addressselect.net.RequestUtil.NetWorkResult {
          + onError()
          + onStart()
          {abstract} + onSuccess()
      }
    }
  }
  

  namespace com.gykj.addressselect {
    namespace net {
      class com.gykj.addressselect.net.RetrofitUtil {
          {static} - CONNECT_TIMEOUT : long
          {static} - READ_TIMEOUT : long
          {static} - WRITE_TIMEOUT : long
          {static} - gson : Gson
          {static} - mLoggingInterceptor : HttpLoggingInterceptor
          {static} - mOkHttpClient : OkHttpClient
          {static} - mRewriteCacheControlInterceptor : Interceptor
          {static} + create()
          {static} - getOkHttpClient()
      }
    }
  }
  

  com.gykj.addressselect.net.OkHttpEventListener -up-|> okhttp3.EventListener
  com.gykj.addressselect.net.OkHttpEventListener o-- com.gykj.addressselect.net.OkHttpEvent : mOkHttpEvent
  com.gykj.addressselect.net.RequestUtil +-down- com.gykj.addressselect.net.RequestUtil.InvokeRequestHandler
  com.gykj.addressselect.net.RequestUtil +-down- com.gykj.addressselect.net.RequestUtil.NetWorkResult
  com.gykj.addressselect.net.RequestUtil.InvokeRequestHandler .up.|> java.lang.reflect.InvocationHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
